samples/_failures_safe/1761558746_a9be48_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3587d480.c: In function ‘main’:
./samples/SAFE/__tmp_3587d480.c:120:5: error: ‘size’ undeclared (first use in this function); did you mean ‘size_t’?
  120 |     size
      |     ^~~~
      |     size_t
./samples/SAFE/__tmp_3587d480.c:120:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_3587d480.c:120:9: error: expected ‘;’ at end of input
  120 |     size
      |         ^
      |         ;
./samples/SAFE/__tmp_3587d480.c:120:5: error: expected declaration or statement at end of input
  120 |     size
      |     ^~~~
